Merged into main 1.21 branch
Updated everything to work with 1.21